plugins {
	id "java"
	id "org.springframework.boot" version "3.1.0"
	id "io.spring.dependency-management" version "1.1.0"
	id "com.vaadin" version "24.0.4"
}

group = "ch.fortylove"
version = "0.0.1-SNAPSHOT"
sourceCompatibility = "17"
targetCompatibility = "17"

repositories {
	mavenCentral()
}

ext {
	set("vaadinVersion", "24.0.4")
}

dependencyManagement {
	imports {
		mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
	}
}

dependencies {
	implementation("org.springframework.boot:spring-boot-starter-data-jpa:3.0.4")
	implementation("com.vaadin:vaadin-spring-boot-starter:24.0.0")
	implementation("org.springframework.boot:spring-boot-starter-security:3.0.4")

	runtimeOnly("com.h2database:h2:2.1.214")
	runtimeOnly("com.microsoft.sqlserver:mssql-jdbc:12.2.0.jre11")

	developmentOnly("com.microsoft.sqlserver:mssql-jdbc_auth:12.2.0.x64")
	developmentOnly("org.springframework.boot:spring-boot-devtools:3.0.4")

	testImplementation("org.springframework.boot:spring-boot-starter-test:3.0.4")
}

// for com.microsoft.sqlserver:mssql-jdbc_auth dependency
configurations {
	developmentOnly {
		exclude group: 'com.microsoft.sqlserver', module: 'mssql-jdbc_auth'
	}
}

vaadin {
	pnpmEnable = true
	productionMode = true
	generateBundle(true)
	optimizeBundle(true)
}

test {
	useJUnitPlatform()
}